--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="container">
      <div class="todo">
-        <h1>To Do App</h1>
+        <h1>To-Do App</h1>
+        <input class="inputs" type="text" placeholder="Add new task...">
      </div>
     </div> 
 
