--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <div class="todo">
         <h1>To-Do App</h1>
         <input class="inputs" type="text" placeholder="Add new task...">
+        <button class="btn">+</button>
      </div>
     </div> 
 
