--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <div class="container">
      <div class="todo">
         <h1>To-Do App</h1>
+        <p id="displayText">Your current tasks <span id="taskNo">0</span></p>
         <input class="inputs" type="text" placeholder="Add new task...">
-        <button class="btn">+</button>
+        <button id="btn">+</button>
      </div>
     </div> 
 
 
-    
+   <script src="index.js"></script> 
 </body>
 </html>
