added a task adding counter for every task and modified the image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Federant&family=Libre+Baskerville:ital@1&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Federant&family=Libre+Baskerville:ital@1&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=SN+Pro:ital,wght@0,200..900;1,200..900&family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +17,8 @@
      <div class="todo">
         <h1>To-Do App</h1>
         <p id="displayText">Your current tasks <span id="taskNo">0</span></p>
-        <input class="inputs" type="text" placeholder="Add new task...">
+        <input type="text"  id="inputs" type="text" placeholder="Add new task...">
+        
         <button id="btn">+</button>
      </div>
     </div> 
