added no task image and modified it

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <input type="text"  id="inputs" type="text" placeholder="Add new task...">
          <button type="submit"  id="btn">+</button>
           <ul id="task-list"></ul>
-          
+           <img class="emptyImage" src="./No task image.jpg" height="192px" alt="No task image">
            
           </div> 
      </div>
