--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <div class="todo">
          <h1>To-Do App</h1>
          <p id="displayText">Your current tasks <span id="taskNo">0</span></p>
-         <input type="text"  id="inputs" type="text" placeholder="Add new task...">
+         <input type="text"  id="inputs" type="text" placeholder="Add new task..." autofocus autocomplete="off">
          <button type="submit"  id="btn">+</button>
           <ul id="task-list"></ul>
            <img class="emptyImage" src="./No task image.jpg" height="192px" alt="No task image">
