Added functionality to delete task button

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
          <h1>To-Do App</h1>
          <p id="displayText">Your current tasks <span id="taskNo">0</span></p>
          <input type="text"  id="inputs" type="text" placeholder="Add new task..." autofocus autocomplete="off">
-         <button type="submit"  id="btn">+</button>
-          <ul id="task-list"></ul>
-           <img class="emptyImage" src="./No task image.jpg" height="192px" alt="No task image">
-           
+          <button type="submit"  id="btn">+</button>
+         <div class="todos-container">
+             
+              <ul id="task-list"></ul>
+             <img class="emptyImage" src="./No task image.jpg" height="150px" alt="No task image">
+             </div>
           </div> 
      </div>
     </div> 
