--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
              <img class="emptyImage" src="./No task image.jpg" height="150px" alt="No task image">
              </div>
           </div> 
+           <footer class="footer">
+        <p> <span id="year"></span> © Designed and Developed by Bebi </p>
+    </footer>
      </div>
+
     </div> 
 
+   
 
    <script src="index.js"></script> 
    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
